--- a/pom.xml
+++ b/pom.xml
@@ -1,25 +1,32 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.amareshp</groupId>
-  <artifactId>java-examples</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>Java Examples</name>
-  <description>Java Examples</description>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.amareshp</groupId>
+    <artifactId>java-examples</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Java Examples</name>
+    <description>Java Examples</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <compileSource>1.7</compileSource>
         <testng_version>6.8.8</testng_version>
     </properties>
-    
+
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng_version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
@@ -31,5 +38,5 @@
                 </configuration>
             </plugin>
         </plugins>
-    </build>  
+    </build>
 </project>
